Feature backend add new endpoint for admin
* feature: update openapi

* feature: add /api/admin/routes for get all routes
